# snowflake_and_dbt_technical_challenge

./: .dockerignore  .gitignore  404.html  Dockerfile  Makefile  README.md  airflow_settings.yaml  dbt_project.yml  faced_problems.html  future_implementations.html  mkdocs.yml  modus_operandi.html  modus_operandi.md  pyproject.toml  requirements.txt  statement.html
.astro/: config.yaml
dags/: patient_data_elt.py
dags/dbt/caspar_health_dbt_cosmos/: README.md  dbt_project.yml
dags/dbt/caspar_health_dbt_cosmos/models/analysis/: grouped_patients.sql
dags/dbt/caspar_health_dbt_cosmos/models/transform/: dim_patients.sql  fct_exercises.sql  fct_steps.sql
dags/dbt/dbt_cosmos/: dbt_project.yml
dags/dbt/dbt_cosmos/tests/dags/: test_dag_example.py
docs/: faced_problems.md  future_implementations.md  modus_operandi.md  statement.md
docs/stylesheets/: extra.css
docs/tests/: index.md
models/analysis/: grouped_patients.sql  grouped_patients.yml  patients_grouped.sql  patients_results.sql  results_patients.sql  results_patients.yml
models/transform/: dim_patients.sql  dim_patients.yml  fct_exercises.yml  fct_steps.sql  fct_steps.yml
search/: search_index.json
seeds/: patients.csv  steps.csv
tests/: index.html
